테스트용 수정

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@use "./component/intro";
 @use "./component/cover";
 @use "./component/invitation";
 @use "./component/button";
@@ -9,6 +10,12 @@
 @use "./component/guestbook";
 @use "./component/modal";
 @use "./component/shareButton";
+
+.background.blurred {
+  filter: blur(8px);
+  // 인트로 화면 아래에 있도록 하여 클릭 등을 방지
+  pointer-events: none;
+}
 
 :root {
   --theme-color: #ff8585;
@@ -22,7 +29,7 @@
   --white-color: #ffffff;
   --red-color: #ff0000;
 
-  font-family: "MapoGoldenPier";
+  font-family: "Cafe24";
   font-size: 20px;
   @media (max-width: 500px) {
     font-size: 4vw;
@@ -74,7 +81,7 @@ $colors: (
 }
 
 button {
-  font-family: "MapoGoldenPier";
+  font-family: "HDHyundai";
   font-size: 1rem;
   border: none;
   background-color: transparent;
