--- a/public/font.css
+++ b/public/font.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "MapoGoldenPier";
-  src: url("./MapoGoldenPierA.woff") format("woff");
+  font-family: "Cafe24";
+  src: url("./Cafe24Gowoonbam.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -12,3 +12,27 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "HDHyundai";
+  src: url("./Medium.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Bandal";
+  src: url("./Hakgyoansim_BandalOTFL.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Siganpyo";
+  src: url("./Hakgyoansim_SiganpyoOTFR.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "MulgyeolB";
+  src: url("./HakgyoansimMulgyeolOTFB.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
