--- a/src/component/bgEffect/index.scss
+++ b/src/component/bgEffect/index.scss
@@ -1,11 +1,7 @@
 .bg-effect {
-  @media print {
-    display: none;
-  }
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  z-index: 2;
+  height: 100vh;
 }
